changes to design; general updates end of 2021

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -7,7 +7,7 @@ layout: default
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
   <div class="post-content">
-    <!-- style tag added for individual design of the articles page --!>
+    <!-- style tag added for individual design of the articles page -->
     <style>
         img {
           display: block;
@@ -19,7 +19,9 @@ layout: default
           font-size: .8rem;
           color: red;
     </style>
+    
     {{ content }}
+
   </div>
 
 </article>
