--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" style="font-family: monospace;" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
     {%- if page_paths -%}
       <nav class="site-nav">
@@ -21,7 +21,10 @@
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
               {%- unless my_page.exclude -%}
-                <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                <a {% if my_page.title == page.category %} class="page-link" style="color:red;" {% else %} class="page-link" {%
+                  endif %}
+                
+                href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
               {%- endunless -%}
             {%- endif -%}
           {%- endfor -%}
