--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -8,18 +8,35 @@ layout: default
   </header>
   <div class="post-content">
     <!-- style tag added for individual design of the articles page -->
+
     <style>
         img {
           display: block;
           margin-left: auto;
           margin-right: auto;
         }
+        
         .image-caption {
           text-align: center;
           font-size: .8rem;
           color: red;
-		}
+		    }
+
+        .csl-entry {
+          text-indent: -1em;
+          padding-left: 1em;
+          margin-bottom: 1em;
+        }
+
+        figcaption {
+          text-align: center;
+        }
+
+        figcaption span:first-child {
+          font-weight: bold;
+        }
     </style>
+
     
     {{ content }}
 
