--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -12,11 +12,27 @@ layout: default
           margin-left: auto;
           margin-right: auto;
         }
+        
         .image-caption {
           text-align: center;
           font-size: .8rem;
           color: red;
-		}
+		    }
+
+        .csl-entry {
+          text-indent: -1em;
+          padding-left: 1em;
+          margin-bottom: 1em;
+        }
+
+        figcaption {
+          text-align: center;
+        }
+
+        figcaption span:first-child {
+          font-weight: bold;
+        }
+
     </style>
     
     {{ content }}
